# rosh_robot_plugins

./: .hgignore  stack.xml
rosh/: manifest.xml  rosh
rosh/src/rosh/impl/: msg.py  packages.py  roshlets.py  service.py  show.py
rosh_common/: CHANGELOG.rst  CMakeLists.txt  manifest.xml  package.xml  setup.py
rosh_common/src/rosh_common/: __init__.py  action.py  camera.py  py_image_view.py
rosh_geometry/: CHANGELOG.rst  manifest.xml  package.xml  setup.py
rosh_geometry/src/rosh_geometry/: __init__.py  geometry.py  helpers.py  tf_frame.py
rosh_robot/: CHANGELOG.rst  CMakeLists.txt  manifest.xml  package.xml  setup.py
rosh_robot/src/rosh_robot/: __init__.py
rosh_robot_plugins/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.py
roshlaunch/: manifest.xml
roshlaunch/src/roslaunch/: core.py  xmlloader.py
